// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Addons|Viewport default 1`] = `
<div
  class="emotion-0"
>
  I don't have problems being rendered using the default viewport.
</div>
`;

exports[`Storyshots Addons|Viewport.Custom Default (Kindle Fire 2) Disabled 1`] = `
<div
  class="emotion-0"
>
  There should be no viewport selector in the toolbar
</div>
`;

exports[`Storyshots Addons|Viewport.Custom Default (Kindle Fire 2) Inherited 1`] = `
<div
  class="emotion-0"
>
  I've inherited 
  <b>
    Kindle Fire 2
  </b>
   viewport from my parent.
</div>
`;

exports[`Storyshots Addons|Viewport.Custom Default (Kindle Fire 2) Overridden via "withViewport" parameterized decorator 1`] = `
<div
  class="emotion-0"
>
  I respect my parents but I should be looking good on 
  <b>
    iPad
  </b>
  .
</div>
`;
